public/css/style.css
.html,.body
{
   position: relative;  
   overflow: hidden;
   height:100%;
   margin:0;
}

header
{
   background: #00BCD4;
   padding: 2em 0;
   margin-bottom: 2em;
}

.actual-photo
{
   margin-bottom: 2em;
}
.alert-content
{
   
   
   
   box-shadow: 0 5px 10px gray;
   padding: 1em;
   position: relative;
   overflow: hidden;
}
.carousel, .item, .active {
height:100%;
}
.carousel-inner {
height:100%;
}
.carousel {
margin-bottom: 60px;
}
.carousel-caption {
z-index: 10;
}
.carousel .item {
background-color: #777;
}
.carousel .carousel-inner .bg {
background-repeat:no-repeat;
background-size:cover;
}
.carousel .carousel-inner .bg1 {
background-image:url(../images/1.jpg);
background-position: center top;
}
.carousel .carousel-inner .bg2 {
background-image:url(../images/2.jpg);
background-position: center center;
}
.carousel .carousel-inner .bg3 {
background-image:url(../images/3.jpg);
background-position: center bottom;
}
.carousel-control .arrow
{
   background: black;
   border-radius: 50%;
   font-size: 1em;


   
}
/* --- Container configuration ---------------------------------------------------------- */
.category-icon 
{    
   float: left;
    height: 200px;
    overflow: hidden;
    position: relative;
    width: 220px;
}

/* --- Link configuration that contains the image and label ----------------------------- */
.category-icon a 
{

    display: block;
    position: relative;
}

.category-icon a img 
{
    height: 250px;
    left: -20px;
    position: relative;
    top: -20px;
    width: 260px;
}

.content
{
   position: relative;
   
}

.default-margin
{
   margin-bottom: 2em;
}
.el-bell
{
   font-size: 2em;
   color:white;
}
.el-facebook
{
   color: #314A7E;
   background: white;  
}
.el-twitter
{
   color: #339DC3;
}
.el-asterisk
{
   color: red;
   position: absolute;
   top: -9px;
   right: 62px;
}
.el-caret-down
{
   font-size: 10px;
}

.content
{
   padding-top: 5em;
}
.description
{
   font-size: 1.2em;
   text-align: left;

}


.first-row
{
   margin-bottom: 3em;
}

.header
{
   color: white;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 100;
}
.header-category
{
   background: #2c3350;
   color: white;
   font-size: 1.5em;
   padding: .5em;
   text-align: center;
   margin: 0;

}


.house-temperature .title
{
   background: rgb(200,0,0);
   color: white;
   text-align: center;
   margin: 0;
}
.house-temperature .value
{
   
   padding: 5em;
}
.jumbotron
{
	overflow: hidden;
}

.logout
{
   background: #EFFB41;
   font-size: 1em;
   padding: 0.5em 1em;
   width: 100%;
}
.logo
{
   position: absolute;
   overflow: hidden;
   top: 0;
   left: 0;

}

.logo img
{
   width: 100px;
}
.photo
{
   display: inline-block;
   position: relative;
   
}
.profile, .notification
{
   display: table-cell;
   vertical-align: middle;
}
.notification
{
   padding-top: .7em;
}

.round
{
   border-radius: 50%;
}
.social-login
{
   background: rgba(0,0,0,.7);
   padding: 5em;
   position: absolute;
   top: 30%;
   left: 30%;
   width: 40%;
}
.social-login a
{
   
   color: white;
   margin: 0 auto;
   
}

.social-login div
{
   margin: 1em auto;
   position: relative;
   top: 50%;
   left: 20%;

}

.username
{
   color:white;
}


@media screen and (max-width: 1440px)
{
   .category-icon 
   {    
      float: none;
      margin: 0 auto;
   }
   .description
   {
      width: 100%;
   }
   .logo img
   {  
      margin-top: 1em;
      width: 80px;
   }

}

@media screen and (max-width: 1024px)
{
   .carousel-inner > .item > img 
   { 

     min-width:100%;
     height:500px;
   }

   .social-login
   {
      padding: 1em;
      top: 30%;
      left: 25%;
      width: 50%;
   }
   .logo img
   {  
      margin-top: 1em;
      width: 80px;
   }
}

@media screen and (max-width: 768px)
{
   .social-login
   {
      left: 15%;
      width: 70%;
   }
   .carousel-control .arrow
   {
      padding: .3em;   
   }
   .logo img
   {  
      margin-top: 1em;
      width: 80px;
   }

}

@media screen and (max-width: 600px)
{
   .categories
   {
      margin-left: 5%;
      width: 90%;
   }
   .logo img
   {  
      margin-top: 1em;
      width: 80px;
   }
}


@media screen and (max-width: 480px)
{

   .carousel-inner > .item > img 
   { 

     min-width:100%;
     height:300px;
   }
   .carousel-control .arrow
   {
      font-size: .7em;
      padding: .5em;   
      margin-top: 10em;
   }
   .logo img
   {
      margin-top: 1em;
      width: 80px;
   }
   .logout
   {
      font-size: 1em;
      padding:  .5em 1em;
   }
   .profile
   {
      float: none;
      
   }
   .profile .photo
   {
      
      margin-right: 3em;
   }


   .social-login
   {
      font-size: 1.3em;
      left: 0%;
      width: 100%;
   }
   .social-login div
   {
      margin: 0.5em auto;


   }
   .el-facebook, .el-twitter
   {
      font-size: 1em;
   }
   
   .xs-center
   {
      text-align: center;
   }

}

